# detourist

./: .env  .env.example  .gitignore  CLIP_ENABLED_STATUS.md  Dockerfile  Dockerfile.backend  ENABLE_CLIP_SCORING.md  OLLAMA_CONFIG.md  OLLAMA_SETUP.md  OPENAI_BACKEND_SETUP.md  OPENAI_SETUP.md  POETRY_GUIDE.md  README.md  SETUP.md  TEAM_GUIDE.md  TEST_INTEGRATION.md  USAGE_GUIDE.md  aws-auth.yaml  capstone_prototype.ipynb  docker-compose.yml  eda.ipynb  pyproject.toml  requirements.txt  test_route_direct.py
backend/: api.py  local_kubernetes_backend_demo.sh  orchestrator.py  orchestrator.py.save  orchestrator_sync.py
backend/evaluation/: README.md  __init__.py  evaluator.py  ground_truth_examples.py  ground_truth_scoring_examples.py  run_evaluation.py  run_scoring_evaluation.py
backend/extraction/: __init__.py  faiss_osm_validator.py  llm_extractor.py  llm_providers.py  prompts.py
backend/geocoding/: __init__.py  geocoder.py
backend/infra/aws/: backend-configmap.yaml  backend-secrets.yaml  deployment-backend.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service-backend.yaml
backend/routing/: __init__.py  route_builder.py
backend/scoring/: __init__.py  image_processor.py  route_scorer.py
backend/tests/: test_baseline_scoring.py  test_geocoding.py  test_route_builder.py  test_route_scorer.py  test_waypoint_searcher.py
backend/waypoints/: __init__.py  waypoint_searcher.py
docs/: README.md
frontend/: Dockerfile  FRONTEND_MIGRATION.md  IMPORT_FIXES.md  SETUP_CHECKLIST.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/figma-import/: README.md  index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src_backup/: App.tsx
frontend/src_backup_old/: App.tsx  index.css  theme.ts
misc_docs/: CHANGES_SUMMARY.md  DOCKER_OLLAMA_SETUP.md  INTEGRATION_FIX_SUMMARY.md  LOCATION_NAMES_FIX.md  OLLAMA_SETUP.md  RUNTIME_ERROR_FIXES.md
prototype/: capstone_prototype.ipynb  scenic_search_zone_map.html
scripts/: setup-ollama.sh  setup.sh  test_geocoding.py  test_route_builder.py  test_waypoint_searcher.py
(+67 files in other folders)
