[project]
name = "free-form-text-to-route"
version = "1.0.0"
description = "A web application that generates custom routes from natural language prompts"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "httpx>=0.24.1",
    "requests>=2.28.2",
    "pydantic>=1.10.7",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "nltk>=3.8.1",
    "numpy>=1.25.0",
    "torch",
    "torchvision", 
    "transformers>=4.30.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "pillow>=10.0.0",
    "geopy>=2.3.0",
    "shapely>=2.0.1",
    "folium>=0.14.0",
    "sqlalchemy>=2.0.15",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.2",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
start-backend = "uvicorn backend.api:app --reload"
start-backend-prod = "uvicorn backend.api:app --host 0.0.0.0 --port 8000"

[tool.poetry]
packages = [{include = "backend"}]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
